# spotify-lyrics

./: .env.example  .gitignore  README.md  api.py  main.py  pyproject.toml  requirements.txt  vercel.json
src/: offset_service.py  routes.py  utils.py
src/clients/: factory.py  service.py
src/models/: lyrics.py  requests.py
